--- a/src/css/animations.css
+++ b/src/css/animations.css
@@ -372,7 +372,7 @@
     transform: scale(1.1);
   }
 }
-@keyframes fade-in-swcqrz4 {
+@keyframes fade-in-explore-card__nav-btn-wrapper {
   from {
     opacity: 0;
   }
@@ -1191,7 +1191,7 @@
     opacity: 1;
   }
 }
-@-webkit-keyframes fade-in-swcqrz4 {
+@-webkit-keyframes fade-in-explore-card__nav-btn-wrapper {
   from {
     opacity: 0;
   }
