--- a/src/css/components/buttons.css
+++ b/src/css/components/buttons.css
@@ -1288,7 +1288,7 @@ fieldset[disabled] .btn {
     ) !important;
   }
 }
-.btn-wishlist[class][class] {
+.explore-card__save-btn[class][class] {
   display: inline-block;
   position: relative;
   -webkit-text-decoration: none;
@@ -1299,7 +1299,7 @@ fieldset[disabled] .btn {
   font-family: inherit;
   touch-action: manipulation;
 }
-.dir.btn-wishlist[class][class] {
+.dir.explore-card__save-btn[class][class] {
   cursor: pointer;
   margin: 0;
   text-align: center;
@@ -1312,10 +1312,10 @@ fieldset[disabled] .btn {
   padding-right: 8px;
   background: #d3d3d3;
 }
-.btn-wishlist[class][class]:disabled {
+.explore-card__save-btn[class][class]:disabled {
   opacity: 0.3;
 }
-.dir.btn-wishlist[class][class]:disabled {
+.dir.explore-card__save-btn[class][class]:disabled {
   cursor: not-allowed;
 }
 @media (hover: hover) {
