--- a/src/css/global.css
+++ b/src/css/global.css
@@ -2199,7 +2199,7 @@ button[data-testid=cypress-headernav-profile]:focus + .c3i7glo[class][class] {
   }
 }
 @media (prefers-reduced-motion:reduce) {
-  .dir.vq7srz5[class][class]:focus-visible {
+  .dir.btn-save[class][class]:focus-visible {
     -webkit-transition: none;
     transition: none
   }
