--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -3226,7 +3226,7 @@
   padding: 0 !important;
   list-style: none !important;
 }
-._3hmsj {
+.box-border {
   --webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
