_1h6n1zu -> img-middle

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -54429,7 +54429,7 @@ textarea {
   overflow: hidden !important;
   border-radius: 50% !important;
 }
-._1h6n1zu {
+.img-middle {
   background-position: 50% 50% !important;
   background-repeat: no-repeat !important;
 }
