--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -8776,24 +8776,24 @@ select[disabled] {
     transition: none !important;
   }
 }
-._mcve6m1 {
+.hero-banner {
   position: relative !important;
   width: 100% !important;
   height: 400px !important;
 }
 @media (min-width: 1128px) {
-  ._mcve6m1 {
+  .hero-banner {
     height: 480px !important;
   }
 }
-._n02jag {
+.hero-banner__content {
   position: absolute !important;
   top: 0 !important;
   bottom: 0 !important;
   left: 0 !important;
   right: 0 !important;
 }
-._mgi2p8w {
+.hero-banner__content-wrapper {
   position: relative !important;
   margin-left: auto !important;
   margin-right: auto !important;
@@ -8802,13 +8802,13 @@ select[disabled] {
   max-width: 100% !important;
 }
 @media (min-width: 1128px) {
-  ._mgi2p8w {
+  .hero-banner__content-wrapper {
     margin-top: 64px !important;
     margin-bottom: 64px !important;
   }
 }
 @media (min-width: 744px) {
-  ._mgi2p8w {
+  .hero-banner__content-wrapper {
     margin-top: 24px !important;
     margin-bottom: 24px !important;
     text-align: center !important;
@@ -8817,27 +8817,27 @@ select[disabled] {
   }
 }
 @media (max-width: 743px) {
-  ._mgi2p8w {
+  .hero-banner__content-wrapper {
     margin-top: -44px !important;
   }
 }
-._1j931jyb {
+.hero-banner__description-text {
   margin: auto !important;
   max-width: 280px !important;
   font-size: 18px !important;
 }
-._1jw32s5b {
+.hero-banner__button-text {
   padding-left: 8px !important;
   padding-right: 8px !important;
   text-transform: uppercase !important;
   line-height: 32px !important;
 }
-._127vi0i {
+.hero-banner__button-icon {
   padding-left: 6px !important;
   position: relative !important;
   top: 1px !important;
 }
-._ywoqsoa {
+.hero-banner__button {
   display: inline-block !important;
   margin: 0 !important;
   position: relative !important;
@@ -8872,59 +8872,59 @@ select[disabled] {
   border-color: transparent !important;
   color: #484848 !important;
 }
-._ywoqsoa::-moz-focus-inner {
+.hero-banner__button::-moz-focus-inner {
   border: 0 !important;
   padding: 0 !important;
   margin: 0 !important;
 }
-._ywoqsoa:focus::-moz-focus-inner {
+.hero-banner__button:focus::-moz-focus-inner {
   border: 1px dotted #000 !important;
 }
-._ywoqsoa:-moz-focusring {
+.hero-banner__button:-moz-focusring {
   outline-color: #000 !important;
 }
-._ywoqsoa:disabled {
+.hero-banner__button:disabled {
   background: rgba(255, 255, 255, 0.3) !important;
   border-color: transparent !important;
   color: #484848 !important;
 }
-._ywoqsoa:focus {
+.hero-banner__button:focus {
   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.5), 0 0 0 5px rgba(255, 255, 255, 0.7) !important;
   outline: 0 !important;
   -webkit-transition: box-shadow 0.2s !important;
   -moz-transition: box-shadow 0.2s !important;
   transition: box-shadow 0.2s !important;
 }
-._ywoqsoa:focus::-moz-focus-inner {
+.hero-banner__button:focus::-moz-focus-inner {
   border: none !important;
   padding: 0 !important;
   margin: 0 !important;
 }
-._ywoqsoa:focus:focus::-moz-focus-inner {
+.hero-banner__button:focus:focus::-moz-focus-inner {
   border: none !important;
 }
-._ywoqsoa:focus:-moz-focusring {
+.hero-banner__button:focus:-moz-focusring {
   outline: 0 !important;
 }
 @media (prefers-reduced-motion: reduce) {
-  ._ywoqsoa:focus {
+  .hero-banner__button:focus {
     -webkit-transition: none !important;
     -moz-transition: none !important;
     transition: none !important;
   }
 }
-._ywoqsoa:hover {
+.hero-banner__button:hover {
   background: #fff !important;
   border-color: transparent !important;
   color: #484848 !important;
 }
-._ywoqsoa:active {
+.hero-banner__button:active {
   background: #e2e2e2 !important;
   border-color: transparent !important;
   color: #484848 !important;
 }
 @supports (--custom: properties) {
-  ._ywoqsoa {
+  .hero-banner__button {
     border-radius: var(--border-button-small-border-radius, 4px) !important;
     font-size: var(--font-button-small-font-size, 14px) !important;
     line-height: var(--font-button-small-line-height, 22px) !important;
@@ -8956,7 +8956,7 @@ select[disabled] {
     border-color: var(--color-buttons-inverse-border, transparent) !important;
     color: var(--color-buttons-inverse-text, #484848) !important;
   }
-  ._ywoqsoa:disabled {
+  .hero-banner__button:disabled {
     background: var(
       --color-buttons-inverse-disabled-color,
       rgba(255, 255, 255, 0.3)
@@ -8967,7 +8967,7 @@ select[disabled] {
     ) !important;
     color: var(--color-buttons-inverse-disabled-text, #484848) !important;
   }
-  ._ywoqsoa:hover {
+  .hero-banner__button:hover {
     background: var(--color-buttons-inverse-hover-color, #fff) !important;
     border-color: var(
       --color-buttons-inverse-hover-border,
@@ -8975,7 +8975,7 @@ select[disabled] {
     ) !important;
     color: var(--color-buttons-inverse-hover-text, #484848) !important;
   }
-  ._ywoqsoa:active {
+  .hero-banner__button:active {
     background: var(--color-buttons-inverse-active-color, #e2e2e2) !important;
     border-color: var(
       --color-buttons-inverse-active-border,
@@ -9020,7 +9020,7 @@ select[disabled] {
     ) !important;
   }
 }
-._1ep1f1h7 {
+.hero-banner__button-wrapper {
   margin: 0 !important;
   word-wrap: break-word !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
@@ -24646,7 +24646,7 @@ _qgvrjoy {
   line-height: 1.375em !important;
   color: #484848 !important;
 }
-._czm8crp {
+.hero-banner__description {
   margin: 0 !important;
   word-wrap: break-word !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
@@ -33210,10 +33210,6 @@ tr.show-desktop {
 ._8iqo2b {
   position: relative !important;
   z-index: 5 !important;
-}
-._ni9axhe {
-  display: table-cell;
-  vertical-align: middle !important;
 }
 ._mo78s93 {
   display: inline-block !important;
@@ -52925,16 +52921,6 @@ tr.show-desktop {
   line-height: 20px !important;
   padding-left: 8px !important;
 }
-._czm8crp {
-  margin: 0 !important;
-  overflow-wrap: break-word !important;
-  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
-    'Helvetica Neue', sans-serif !important;
-  font-size: 16px !important;
-  font-weight: 400 !important;
-  line-height: 1.375em !important;
-  color: #484848 !important;
-}
 ._zdxht7 {
   width: 100% !important;
 }
@@ -54124,7 +54110,7 @@ tr.show-desktop {
     padding: 16px !important;
   }
 }
-._1258d0t {
+.hero-banner__content-bg {
   width: 100% !important;
   height: 100% !important;
   position: relative !important;
@@ -57711,7 +57697,7 @@ a:hover {
   }
 }
 
-/* Start Additional H2 + Cards */
+/* Additional H2 + Cards */
 
 .flex-items::before {
   display: -webkit-box !important;
