--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -51022,13 +51022,13 @@ tr.show-desktop {
 ._e2l2kr::-webkit-media-text-track-display {
   top: 77.5% !important;
 }
-._6tbg2q {
+.img-full {
   height: 0 !important;
   width: 0 !important;
   position: absolute !important;
 }
 @supports (object-fit: cover) {
-  ._6tbg2q {
+  .img-full {
     height: 100% !important;
     width: 100% !important;
   }
