--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -43462,11 +43462,11 @@ tr.show-desktop {
   --contentscroller_contain: layout paint size style;
   --contentscroller_overflow: visible hidden;
 }
-.card__carousel__item[class][class] {
+.explore-card__carousel-item[class][class] {
   display: block;
   color: transparent;
 }
-.cjv59qb[class][class] {
+.explore-card__carousel-img-wrapper[class][class] {
   position: relative;
   width: 100%;
   height: 100%;
