--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -12073,7 +12073,7 @@ h3:first-child {
 .t1uqc5yt[class][class] {
   display: inline-block;
 }
-.c8gkmzg[class][class] {
+.header-filter__wrappper[class][class] {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -12081,32 +12081,32 @@ h3:first-child {
   gap: var(--h-x-sf-jw);
 }
 @media (min-width: 744px) {
-  .c8gkmzg[class][class] {
+  .header-filter__wrappper[class][class] {
     gap: var(--fgg-f-l-a);
   }
 }
-.c1w8ohg7[class][class] {
+.header-filter__wrappper--active[class][class] {
   min-width: revert;
 }
-.i1wps9q8[class][class] {
+.header-filter__icon[class][class] {
   max-width: 100%;
   width: var(--chipsbar-chip-image_size, 24px);
   height: auto;
   filter: contrast(calc(13 / 44));
 }
-.dir.i1wps9q8[class][class] {
+.dir.header-filter__icon[class][class] {
   transition: filter 0.2s, transform 0.2s;
 }
 @media (prefers-reduced-motion: reduce) {
-  .dir.i1wps9q8[class][class] {
+  .dir.header-filter__icon[class][class] {
     transition-duration: 0;
   }
 }
-.tamhn2w[class][class] {
+.header-filter__label[class][class] {
   white-space: nowrap;
   position: relative;
 }
-.tamhn2w[class][class]::after {
+.header-filter__label[class][class]::after {
   position: absolute;
   content: '';
   inset-inline: 0;
@@ -12114,21 +12114,21 @@ h3:first-child {
   top: calc(100% + 12px);
   opacity: 0;
 }
-.dir.tamhn2w[class][class]::after {
+.dir.header-filter__label[class][class]::after {
   transition: opacity 0.2s;
 }
 @media (prefers-reduced-motion: reduce) {
-  .dir.tamhn2w[class][class]::after {
+  .dir.header-filter__label[class][class]::after {
     transition: none;
   }
 }
-.t1trgdqu[class][class] {
+.header-filter__text[class][class] {
   display: inline-block;
 }
-.dir.t1trgdqu[class][class] {
+.dir.header-filter__text[class][class] {
   transition: transform 0.2s;
 }
-.c1l3w0tx[class][class] {
+.header-filter[class][class] {
   border: 1px solid #000;
   background-color: #fff;
   outline: 0;
@@ -12141,7 +12141,7 @@ h3:first-child {
   width: max-content;
   -webkit-tap-highlight-color: transparent;
 }
-.dir.c1l3w0tx[class][class] {
+.dir.header-filter[class][class] {
   cursor: pointer;
   text-align: center;
   border-radius: var(--go-h-jh-l);
@@ -12151,81 +12151,81 @@ h3:first-child {
   margin: 12px 0 0;
   transition: box-shadow 0.2s, color 0.2s;
 }
-.dir.c1l3w0tx[class][class]:disabled {
+.dir.header-filter[class][class]:disabled {
   cursor: not-allowed;
 }
-.dir.c1l3w0tx[class][class]::-moz-focus-inner {
+.dir.header-filter[class][class]::-moz-focus-inner {
   border: none;
   padding: 0;
   margin: 0;
 }
-.dir.c1l3w0tx[class][class]:focus::-moz-focus-inner {
+.dir.header-filter[class][class]:focus::-moz-focus-inner {
   border: none;
 }
-.c1l3w0tx[class][class]:-moz-focusring {
+.header-filter[class][class]:-moz-focusring {
   outline: 0;
 }
-.c1l3w0tx[class][class]:focus-visible {
+.header-filter[class][class]:focus-visible {
   color: var(--bgxgx);
 }
-.dir.c1l3w0tx[class][class]:focus-visible {
+.dir.header-filter[class][class]:focus-visible {
   box-shadow: 0 0 0 2px var(--f-k-smk-x), 0 0 0 4px rgba(255 255 255 / 0.8);
 }
-.c1l3w0tx[class][class]:focus-visible .i1wps9q8[class][class] {
+.header-filter[class][class]:focus-visible .header-filter__icon[class][class] {
   filter: contrast(1);
 }
 @media (hover: hover) {
-  .c1l3w0tx[class][class]:hover {
+  .header-filter[class][class]:hover {
     color: var(--bgxgx);
   }
-  .c1l3w0tx[class][class]:hover .i1wps9q8[class][class] {
+  .header-filter[class][class]:hover .header-filter__icon[class][class] {
     filter: contrast(1);
   }
-  .c1l3w0tx[class][class]:hover .tamhn2w[class][class]::after {
+  .header-filter[class][class]:hover .header-filter__label[class][class]::after {
     opacity: 1;
   }
-  .dir.c1l3w0tx[class][class]:hover .tamhn2w[class][class]::after {
+  .dir.header-filter[class][class]:hover .header-filter__label[class][class]::after {
     background-color: var(--j-qkgmf);
   }
 }
-.c1l3w0tx[class][class]:active {
+.header-filter[class][class]:active {
   color: var(--bgxgx);
 }
-.c1l3w0tx[class][class]:active .i1wps9q8[class][class] {
+.header-filter[class][class]:active .header-filter__icon[class][class] {
   filter: contrast(1);
 }
-.dir.c1l3w0tx[class][class]:active .i1wps9q8[class][class] {
+.dir.header-filter[class][class]:active .header-filter__icon[class][class] {
   transform: scale(0.96);
 }
-.dir.c1l3w0tx[class][class]:active .t1trgdqu[class][class] {
+.dir.header-filter[class][class]:active .header-filter__text[class][class] {
   transform: scale(0.96) translateY(-1px);
 }
-.c1l3w0tx[class][class]:active .tamhn2w[class][class]::after {
+.header-filter[class][class]:active .header-filter__label[class][class]::after {
   opacity: 1;
 }
-.dir.c1l3w0tx[class][class]:active .tamhn2w[class][class]::after {
+.dir.header-filter[class][class]:active .header-filter__label[class][class]::after {
   background-color: var(--j-qkgmf);
 }
-.ccma3s[class][class] {
+.header-filter--active[class][class] {
   background-color: #000;
   color: #fff;
   color: var(--bgxgx);
 }
-.dir.ccma3s[class][class] {
+.dir.header-filter--active[class][class] {
   background-color: unset;
   cursor: default;
 }
-.ccma3s[class][class] .i1wps9q8[class][class] {
+.header-filter--active[class][class] .header-filter__icon[class][class] {
   filter: contrast(1);
 }
-.ccma3s[class][class] .tamhn2w[class][class]::after {
+.header-filter--active[class][class] .header-filter__label[class][class]::after {
   opacity: 1;
 }
-.dir.ccma3s[class][class] .tamhn2w[class][class]::after {
+.dir.header-filter--active[class][class] .header-filter__label[class][class]::after {
   background-color: var(--bgxgx);
 }
 @media (hover: hover) {
-  .dir.ccma3s[class][class]:hover .tamhn2w[class][class]::after {
+  .dir.header-filter--active[class][class]:hover .header-filter__label[class][class]::after {
     background-color: var(--bgxgx);
   }
 }
