--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -42676,7 +42676,7 @@ tr.show-desktop {
   -ms-scroll-snap-stop: var(--contentscroller_scrollsnapstop, normal);
   scroll-snap-stop: var(--contentscroller_scrollsnapstop, normal);
 }
-.dbldy2s[class][class] {
+.card__carousel-desc[class][class] {
   -webkit-clip: rect(0 0 0 0);
   clip: rect(0 0 0 0);
   -webkit-clip-path: inset(100%);
@@ -43447,7 +43447,7 @@ tr.show-desktop {
 .dir.s48kaap[class][class]:last-child {
   margin-top: var(--h-x-sf-jw);
 }
-.cnjlbcx[class][class] {
+.explore-card__carousel-desc-wrapper-var[class][class] {
   --contentscroller_contain: none;
   --contentscroller_content-visibility: unset;
   --contentscroller_controls_z-index: 1;
@@ -44319,7 +44319,7 @@ tr.show-desktop {
   );
   margin-inline-end: var(--contentscroller_controls_margin-inline-end, unset);
 }
-.rztl681[class][class] {
+.card__carousel-desc-wrapper[class][class] {
   display: grid;
   grid-template: var(
     --contentscroller_layout_grid-template,
@@ -44377,7 +44377,7 @@ tr.show-desktop {
   scroll-snap-align: var(--contentscroller_scrollsnapalign, start);
   scroll-snap-stop: var(--contentscroller_scrollsnapstop, normal);
 }
-.dbldy2s[class][class] {
+.card__carousel-desc[class][class] {
   clip: rect(0 0 0 0);
   clip-path: inset(100%);
   height: 1px;
@@ -44387,7 +44387,7 @@ tr.show-desktop {
   white-space: nowrap;
   width: 1px;
 }
-.dir.dbldy2s[class][class] {
+.dir.card__carousel-desc[class][class] {
   border: 0;
   padding: 0;
 }
